# eclipse

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  assignment.md  docker-compose.yaml  dockerignore  pyproject.toml
docker/: Dockerfile.ingestion  Dockerfile.refining_anomalies_detection  Dockerfile.refining_average  Dockerfile.refining_top_volume
notebook/.ipynb_checkpoints/: Analysis-checkpoint.ipynb
scripts/: data_client.py  data_generator.py
src/ingestion/: entrypoint.py  ingestion_task.py  schemas.py
src/ingestion/checkpoint/: .metadata.crc  metadata
src/ingestion/checkpoint/offsets/: .0.crc  0
src/refining/: column_names.py  commonSchemas.py
src/refining/tasks/: abstract_task.py  entrypoint.py  schema.py  task_manager.py
src/refining/tasks/anomaliesDetectionFinancialProductsTask/: anomalies_detection_financial_product_task.py  schema.py
src/refining/tasks/averageFinancialProductsTask/: average_financial_product_task.py  schema.py
src/refining/tasks/highestVolumeFinancialProductsTask/: schema.py  (+1 more)
terraform/: dev.auto.tfvars  provider.tf  storage.tf  terraform.tfstate.backup  variables.tf
terraform/aws/eclipse_storage/: main.tf  variables.tf
tests/: conftest.py
tests/ingestion/: sample.csv  test_ingestion_task.py
tests/refining/anomaliesDetectionFinancialProductsTask/: test_anomalies_detection_financial_product_task.py
tests/refining/averageFinancialProductsTask/: test_average_financial_product_task.py
tests/refining/highestVolumeFinancialProductsTask/: test_highest_volume_financial_product_task.py
